[gd_scene load_steps=10 format=2]

[ext_resource path="res://GUI/gui box 1.png" type="Texture" id=1]
[ext_resource path="res://GUI/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Font1.tres" type="DynamicFont" id=3]
[ext_resource path="res://GUI/menu selector.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 20, 20 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 20, 0, 20, 20 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Selector",
"speed": 5.0
} ]

[sub_resource type="Animation" id=1]
resource_name = "Opening"
length = 0.388
step = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("NinePatchRect:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.264073, 0.367995 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 36, -35 ), Vector2( 36, 11 ), Vector2( 36, 10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("NinePatchRect/Selector/AnimatedSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.365, 0.368 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("NinePatchRect/Selector/AnimatedSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.368 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("NinePatchRect/Selector:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.367, 0.368 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("NinePatchRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 36, 10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("NinePatchRect/Selector/AnimatedSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[node name="MainMenu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -90.0
margin_right = 160.0
margin_bottom = 90.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "lmao"
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 36.0
margin_top = 10.0
margin_right = 284.0
margin_bottom = 31.0
texture = ExtResource( 1 )
region_rect = Rect2( 26.8144, 27.0555, 27.481, 27.2217 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selector" type="Node2D" parent="NinePatchRect"]
visible = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="NinePatchRect/Selector"]
position = Vector2( 25, 10 )
scale = Vector2( 0.45, 0.45 )
frames = SubResource( 5 )
animation = "Selector"
speed_scale = 0.7
playing = true
offset = Vector2( -11.1111, 0 )

[node name="GridContainer" type="GridContainer" parent="NinePatchRect"]
margin_left = 27.0
margin_top = 3.0
margin_right = 240.0
margin_bottom = 17.0
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NinePatchRect/GridContainer"]
margin_right = 50.0
margin_bottom = 13.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Items"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="NinePatchRect/GridContainer"]
margin_left = 54.0
margin_right = 104.0
margin_bottom = 13.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Magics"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="NinePatchRect/GridContainer"]
margin_left = 108.0
margin_right = 158.0
margin_bottom = 13.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Stats"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="NinePatchRect/GridContainer"]
margin_left = 162.0
margin_right = 212.0
margin_bottom = 13.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Opening = SubResource( 1 )
anims/RESET = SubResource( 2 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
